samples/_failures_safe/1761485934_41e17c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b06de53.c: In function ‘main’:
./samples/SAFE/__tmp_2b06de53.c:146:9: error: expected expression at end of input
  146 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_2b06de53.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2b06de53.c:146:9: error: expected declaration or statement at end of input
